# afterthought

./: CMakeLists.txt  LICENSE  build.sh
src/: citizen.c  citizen.h  drawing.c  drawing.h  entity.h  fix_string_raylib.c  fix_string_raylib.h  impl.c  ingame.c  ingame.h  main.c  menu.c  menu.h  pathfinding.c  pathfinding.h  settlement.c  settlement.h  tile.c  tile.h  ui.c  ui.h  world.c  world.h
src/entities/: gatherer.c  gatherer.h  george.c  george.h
src/rsrc/: font_SpaceMono.c  font_SpaceMono.h
